--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat and Voice</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Philips Chatt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
-        <div id="chat-container">
-            <div id="chat-box"></div>
-            <input type="text" id="messageInput" placeholder="Skriv ett meddelande...">
-            <button id="sendMessageButton">Skicka</button>
+    <div class="container">
+        <div class="chat">
+            <div id="chatWindow"></div>
+            <input type="text" id="usernameInput" placeholder="Ange ditt användarnamn...">
+            <input type="text" id="messageInput" placeholder="Skriv ditt meddelande här...">
+            <button id="sendButton">Skicka</button>
         </div>
-        <div id="voice-container">
-            <button id="startVoiceButton">Starta samtal</button>
-            <button id="endVoiceButton" disabled>Avsluta samtal</button>
-            <button id="shareScreenButton" disabled>Dela skärm</button>
-            <audio id="localAudio" autoplay muted></audio>
-            <audio id="remoteAudio" autoplay></audio>
-            <audio id="localAudio" autoplay muted></audio>
-            <audio id="remoteAudio" autoplay></audio>
-            <video id="remoteScreen" autoplay></video>
+        <div class="logs">
+            <h2>Loggar</h2>
+            <div id="logWindow"></div>
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
